@@ -1,3 +1,7 @@
+4/15/2009
+	- Fix a hang that could occur when using the dnsjava service provider
+	  on Windows (initial patch from <jy123@users.sourceforge.net>).
+
 11/21/2009
 	- 2.0.8 released
 
@@ -8,7 +12,7 @@
 
 10/01/2009
 	- Properly initialize the Date objects used in RRSIG (and other)
-	  records, so that any unused fields are cleard.
+	  records, so that any unused fields are cleared.
 	  (Klaus Malorny <Klaus.Malorny@knipp.de>)
 
 9/25/2009
